--- a/exchange_stream/exchange_stream_down_kernel/solution/syn/report/lc_mgvf_csynth.xml
+++ b/exchange_stream/exchange_stream_down_kernel/solution/syn/report/lc_mgvf_csynth.xml
@@ -22,52 +22,52 @@
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
-<Best-caseLatency>33166</Best-caseLatency>
-<Average-caseLatency>33201</Average-caseLatency>
-<Worst-caseLatency>33236</Worst-caseLatency>
-<Best-caseRealTimeLatency>0.111 ms</Best-caseRealTimeLatency>
-<Average-caseRealTimeLatency>0.111 ms</Average-caseRealTimeLatency>
-<Worst-caseRealTimeLatency>0.111 ms</Worst-caseRealTimeLatency>
-<Interval-min>33166</Interval-min>
-<Interval-max>33236</Interval-max>
+<Best-caseLatency>4423</Best-caseLatency>
+<Average-caseLatency>4458</Average-caseLatency>
+<Worst-caseLatency>4493</Worst-caseLatency>
+<Best-caseRealTimeLatency>14.742 us</Best-caseRealTimeLatency>
+<Average-caseRealTimeLatency>14.859 us</Average-caseRealTimeLatency>
+<Worst-caseRealTimeLatency>14.975 us</Worst-caseRealTimeLatency>
+<Interval-min>4423</Interval-min>
+<Interval-max>4493</Interval-max>
 </SummaryOfOverallLatency>
 <SummaryOfLoopLatency>
-<VITIS_LOOP_59_1>
+<PRE_LOOP1>
 <TripCount>8</TripCount>
 <Latency>10</Latency>
 <AbsoluteTimeLatency>33</AbsoluteTimeLatency>
 <PipelineII>1</PipelineII>
 <PipelineDepth>3</PipelineDepth>
-</VITIS_LOOP_59_1>
-<VITIS_LOOP_71_3>
+</PRE_LOOP1>
+<PRE_LOOP2>
 <TripCount>8</TripCount>
 <Latency>9</Latency>
 <AbsoluteTimeLatency>29</AbsoluteTimeLatency>
 <PipelineII>1</PipelineII>
 <PipelineDepth>2</PipelineDepth>
-</VITIS_LOOP_71_3>
-<VITIS_LOOP_84_5>
+</PRE_LOOP2>
+<INITIALIZE_LOOP>
 <TripCount>10</TripCount>
 <Latency>12</Latency>
 <AbsoluteTimeLatency>39</AbsoluteTimeLatency>
 <PipelineII>1</PipelineII>
 <PipelineDepth>3</PipelineDepth>
-</VITIS_LOOP_84_5>
-<VITIS_LOOP_95_7>
+</INITIALIZE_LOOP>
+<MAJOR_LOOP>
 <TripCount>4096</TripCount>
-<Latency>32933</Latency>
-<AbsoluteTimeLatency>109765</AbsoluteTimeLatency>
-<PipelineII>8</PipelineII>
-<PipelineDepth>174</PipelineDepth>
-</VITIS_LOOP_95_7>
+<Latency>4189</Latency>
+<AbsoluteTimeLatency>13961</AbsoluteTimeLatency>
+<PipelineII>1</PipelineII>
+<PipelineDepth>95</PipelineDepth>
+</MAJOR_LOOP>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
-<DSP>138</DSP>
-<FF>68483</FF>
-<LUT>23190</LUT>
+<DSP>1104</DSP>
+<FF>208585</FF>
+<LUT>102637</LUT>
 <BRAM_18K>0</BRAM_18K>
 <URAM>0</URAM>
 </Resources>
@@ -1695,55 +1695,11 @@
 <IOProtocol>ap_memory</IOProtocol>
 <IOConfig></IOConfig>
 <Dir>out</Dir>
-<Bits>64</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_to_d0</name>
-<Object>buffer_to</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>512</Bits>
-<Attribute>data</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_to_address1</name>
-<Object>buffer_to</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>3</Bits>
-<Attribute>address</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_to_ce1</name>
-<Object>buffer_to</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
 <Bits>1</Bits>
 <Attribute>control</Attribute>
 </RtlPorts>
 <RtlPorts>
-<name>buffer_to_we1</name>
-<Object>buffer_to</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>64</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_to_d1</name>
+<name>buffer_to_d0</name>
 <Object>buffer_to</Object>
 <Type>array</Type>
 <Scope></Scope>
