--- a/exchange_stream/exchange_stream_up_kernel/solution/syn/report/lc_mgvf_csynth.xml
+++ b/exchange_stream/exchange_stream_up_kernel/solution/syn/report/lc_mgvf_csynth.xml
@@ -18,42 +18,42 @@
 <PipelineType>none</PipelineType>
 <SummaryOfTimingAnalysis>
 <unit>ns</unit>
-<EstimatedClockPeriod>2.665</EstimatedClockPeriod>
+<EstimatedClockPeriod>2.433</EstimatedClockPeriod>
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
-<Best-caseLatency>65921</Best-caseLatency>
-<Average-caseLatency>65921</Average-caseLatency>
-<Worst-caseLatency>65921</Worst-caseLatency>
-<Best-caseRealTimeLatency>0.220 ms</Best-caseRealTimeLatency>
-<Average-caseRealTimeLatency>0.220 ms</Average-caseRealTimeLatency>
-<Worst-caseRealTimeLatency>0.220 ms</Worst-caseRealTimeLatency>
-<Interval-min>65921</Interval-min>
-<Interval-max>65921</Interval-max>
+<Best-caseLatency>4411</Best-caseLatency>
+<Average-caseLatency>4411</Average-caseLatency>
+<Worst-caseLatency>4411</Worst-caseLatency>
+<Best-caseRealTimeLatency>14.702 us</Best-caseRealTimeLatency>
+<Average-caseRealTimeLatency>14.702 us</Average-caseRealTimeLatency>
+<Worst-caseRealTimeLatency>14.702 us</Worst-caseRealTimeLatency>
+<Interval-min>4411</Interval-min>
+<Interval-max>4411</Interval-max>
 </SummaryOfOverallLatency>
 <SummaryOfLoopLatency>
-<VITIS_LOOP_57_1>
+<VITIS_LOOP_58_1>
 <TripCount>10</TripCount>
 <Latency>11</Latency>
 <AbsoluteTimeLatency>36</AbsoluteTimeLatency>
 <PipelineII>1</PipelineII>
 <PipelineDepth>2</PipelineDepth>
-</VITIS_LOOP_57_1>
-<VITIS_LOOP_68_3>
+</VITIS_LOOP_58_1>
+<MAJOR_LOOP>
 <TripCount>4096</TripCount>
-<Latency>65700</Latency>
-<AbsoluteTimeLatency>218978</AbsoluteTimeLatency>
-<PipelineII>16</PipelineII>
-<PipelineDepth>181</PipelineDepth>
-</VITIS_LOOP_68_3>
+<Latency>4189</Latency>
+<AbsoluteTimeLatency>13961</AbsoluteTimeLatency>
+<PipelineII>1</PipelineII>
+<PipelineDepth>95</PipelineDepth>
+</MAJOR_LOOP>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
-<DSP>69</DSP>
-<FF>50014</FF>
-<LUT>18648</LUT>
+<DSP>1104</DSP>
+<FF>190330</FF>
+<LUT>98327</LUT>
 <BRAM_18K>0</BRAM_18K>
 <URAM>0</URAM>
 </Resources>
@@ -1681,7 +1681,7 @@
 <IOProtocol>ap_memory</IOProtocol>
 <IOConfig></IOConfig>
 <Dir>out</Dir>
-<Bits>64</Bits>
+<Bits>1</Bits>
 <Attribute>control</Attribute>
 </RtlPorts>
 <RtlPorts>
@@ -1693,83 +1693,6 @@
 <IOConfig></IOConfig>
 <Dir>out</Dir>
 <Bits>512</Bits>
-<Attribute>data</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_address0</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>3</Bits>
-<Attribute>address</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_ce0</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>1</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_q0</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>in</Dir>
-<Bits>512</Bits>
-<Attribute>data</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_address1</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>3</Bits>
-<Attribute>address</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_ce1</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>out</Dir>
-<Bits>1</Bits>
-<Attribute>control</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>buffer_from_q1</name>
-<Object>buffer_from</Object>
-<Type>array</Type>
-<Scope></Scope>
-<IOProtocol>ap_memory</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>in</Dir>
-<Bits>512</Bits>
-<Attribute>data</Attribute>
-</RtlPorts>
-<RtlPorts>
-<name>first_round_offset</name>
-<Object>first_round_offset</Object>
-<Type>scalar</Type>
-<Scope></Scope>
-<IOProtocol>ap_none</IOProtocol>
-<IOConfig></IOConfig>
-<Dir>in</Dir>
-<Bits>1</Bits>
 <Attribute>data</Attribute>
 </RtlPorts>
 </InterfaceSummary>
