--- a/compute_overlap/down_kernel/solution/syn/report/down_kernel_csynth.xml
+++ b/compute_overlap/down_kernel/solution/syn/report/down_kernel_csynth.xml
@@ -18,7 +18,7 @@
 <PipelineType>none</PipelineType>
 <SummaryOfTimingAnalysis>
 <unit>ns</unit>
-<EstimatedClockPeriod>2.574</EstimatedClockPeriod>
+<EstimatedClockPeriod>2.433</EstimatedClockPeriod>
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
@@ -32,21 +32,21 @@
 <Interval-max>undef</Interval-max>
 </SummaryOfOverallLatency>
 <SummaryOfLoopLatency>
-<VITIS_LOOP_138_1>
+<VITIS_LOOP_148_1>
 <TripCount>undef</TripCount>
 <Latency>undef</Latency>
 <AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
-<IterationLatency>undef</IterationLatency>
-</VITIS_LOOP_138_1>
+<IterationLatency>8890</IterationLatency>
+</VITIS_LOOP_148_1>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
 <BRAM_18K>90</BRAM_18K>
-<DSP>69</DSP>
-<FF>59009</FF>
-<LUT>108914</LUT>
+<DSP>1104</DSP>
+<FF>195756</FF>
+<LUT>104295</LUT>
 <URAM>0</URAM>
 </Resources>
 <AvailableResources>
