--- a/compute_overlap/down_kernel/solution/syn/report/lc_mgvf_csynth.xml
+++ b/compute_overlap/down_kernel/solution/syn/report/lc_mgvf_csynth.xml
@@ -18,42 +18,42 @@
 <PipelineType>none</PipelineType>
 <SummaryOfTimingAnalysis>
 <unit>ns</unit>
-<EstimatedClockPeriod>2.574</EstimatedClockPeriod>
+<EstimatedClockPeriod>2.433</EstimatedClockPeriod>
 </SummaryOfTimingAnalysis>
 <SummaryOfOverallLatency>
 <unit>clock cycles</unit>
-<Best-caseLatency>undef</Best-caseLatency>
-<Average-caseLatency>undef</Average-caseLatency>
-<Worst-caseLatency>undef</Worst-caseLatency>
-<Best-caseRealTimeLatency>undef</Best-caseRealTimeLatency>
-<Average-caseRealTimeLatency>undef</Average-caseRealTimeLatency>
-<Worst-caseRealTimeLatency>undef</Worst-caseRealTimeLatency>
-<Interval-min>undef</Interval-min>
-<Interval-max>undef</Interval-max>
+<Best-caseLatency>4443</Best-caseLatency>
+<Average-caseLatency>4443</Average-caseLatency>
+<Worst-caseLatency>4443</Worst-caseLatency>
+<Best-caseRealTimeLatency>14.809 us</Best-caseRealTimeLatency>
+<Average-caseRealTimeLatency>14.809 us</Average-caseRealTimeLatency>
+<Worst-caseRealTimeLatency>14.809 us</Worst-caseRealTimeLatency>
+<Interval-min>4443</Interval-min>
+<Interval-max>4443</Interval-max>
 </SummaryOfOverallLatency>
 <SummaryOfLoopLatency>
-<VITIS_LOOP_53_1>
+<INITIALZE_LOOP>
 <TripCount>10</TripCount>
 <Latency>11</Latency>
 <AbsoluteTimeLatency>36</AbsoluteTimeLatency>
 <PipelineII>1</PipelineII>
 <PipelineDepth>2</PipelineDepth>
-</VITIS_LOOP_53_1>
-<VITIS_LOOP_64_3>
-<TripCount>undef</TripCount>
-<Latency>undef</Latency>
-<AbsoluteTimeLatency>undef</AbsoluteTimeLatency>
-<PipelineII>16</PipelineII>
-<PipelineDepth>249</PipelineDepth>
-</VITIS_LOOP_64_3>
+</INITIALZE_LOOP>
+<MAJOR_LOOP>
+<TripCount>4128</TripCount>
+<Latency>4221</Latency>
+<AbsoluteTimeLatency>14068</AbsoluteTimeLatency>
+<PipelineII>1</PipelineII>
+<PipelineDepth>95</PipelineDepth>
+</MAJOR_LOOP>
 </SummaryOfLoopLatency>
 </PerformanceEstimates>
 
 <AreaEstimates>
 <Resources>
-<DSP>69</DSP>
-<FF>53990</FF>
-<LUT>103039</LUT>
+<DSP>1104</DSP>
+<FF>190737</FF>
+<LUT>98420</LUT>
 <BRAM_18K>0</BRAM_18K>
 <URAM>0</URAM>
 </Resources>
